--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,8 @@ phases:
       - echo "Building Docker image..."
       # - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 058264531732.dkr.ecr.us-east-1.amazonaws.com
-      - docker build -t "eks-cicd:latest 058264531732.dkr.ecr.us-east-1.amazonaws.com/eks-cicd:latest" .
+      - docker build -t eks-cicd .
+      - docker tag eks-cicd:latest 058264531732.dkr.ecr.us-east-1.amazonaws.com/eks-cicd:latest
       - docker push 058264531732.dkr.ecr.us-east-1.amazonaws.com/eks-cicd:latest
       # - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
   post_build:
